# fishe

./: Cargo.toml  index.html  package.json  vite.config.ts
src/: fish.ts  main.rs  main.ts  spotify.ts  style.css  vite-env.d.ts
