[package]
name = "fishe"
version = "0.1.0"
edition = "2021"
publish = false

[profile.dev.package."*"]
opt-level = 3

[dependencies]
three-d = { version = "0.15.0", features = ["egui-gui"] }
three-d-asset = { version = "0.5.0", features = ["gltf", "png"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
